[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinfra-hetzner-cloud"
version = "0.2.0"
description = "Hetzner Cloud operations and facts for pyinfra"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tobias", email = "tobias@tobias.rip" }]
keywords = ["pyinfra", "hetzner", "cloud", "infrastructure", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyinfra>=3.7",
    "hcloud>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/tobiasdotrip/pyinfra-hetzner-cloud"
Repository = "https://github.com/tobiasdotrip/pyinfra-hetzner-cloud"
Issues = "https://github.com/tobiasdotrip/pyinfra-hetzner-cloud/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
